--- a/app/build.gradle
+++ b/app/build.gradle
@@ -24,7 +24,23 @@ dependencies {
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
-    compile 'com.android.support:appcompat-v7:25.3.0'
+
+    // Android support libs
+    compile "com.android.support:appcompat-v7:$androidSupport"
+    compile "com.android.support:recyclerview-v7:$androidSupport"
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
+
+    // Dagger
+    compile "com.google.dagger:dagger:$dagger"
+    annotationProcessor "com.google.dagger:dagger-compiler:$dagger"
+
+    // Retrofit
+    compile "com.squareup.retrofit2:retrofit:$retrofit"
+    compile "com.squareup.retrofit2:converter-gson:$retrofit"
+
+    // RxAndroid
+    compile 'io.reactivex:rxandroid:1.2.1'
+    compile 'io.reactivex:rxjava:1.1.6'
+
     testCompile 'junit:junit:4.12'
 }
