--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,13 +3,14 @@
     package="xyz.philoliver.crewview" >
 
     <application
+        android:name=".CrewViewApplication"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme" >
-        <activity android:name=".UserListActivity" >
+        <activity android:name=".ui.UserListActivity" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
