--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,13 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
+    ext {
+        // library version variables
+        androidSupport = '25.3.0'
+        dagger = '2.10'
+        retrofit = '2.2.0'
+    }
+
     repositories {
         jcenter()
     }
