--- a/.gitignore
+++ b/.gitignore
@@ -17,6 +17,9 @@ out/
 .gradle/
 build/
 
+# config file containing API key
+config.gradle
+
 # Local configuration file (sdk path, etc)
 local.properties
 .DS_Store
