--- a/app/build.gradle
+++ b/app/build.gradle
@@ -62,5 +62,7 @@ dependencies {
     compile 'com.github.bumptech.glide:glide:3.7.0'
     compile 'jp.wasabeef:glide-transformations:2.0.2'
 
+    compile 'uk.co.chrisjenx:calligraphy:2.2.0'
+
     testCompile 'junit:junit:4.12'
 }
