--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,7 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme">
+        android:theme="@style/CrewView">
 
         <activity android:name=".ui.users.UserListActivity">
             <intent-filter>
@@ -23,7 +23,10 @@
             </intent-filter>
         </activity>
 
-        <activity android:name=".ui.users.UserDetailsActivity"/>
+        <activity
+            android:name=".ui.users.UserDetailsActivity"
+            android:parentActivityName=".ui.users.UserListActivity"
+            android:theme="@style/CrewView.NoActionBar"/>
 
     </application>
 
