Add shared element transition for user image

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,7 +24,7 @@
         </activity>
 
         <activity
-            android:name=".ui.users.UserDetailsActivity"
+            android:name=".ui.users.details.UserDetailsActivity"
             android:parentActivityName=".ui.users.UserListActivity"
             android:theme="@style/CrewView.NoActionBar"/>
 
