--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,8 +25,7 @@
 
         <activity
             android:name=".ui.users.details.UserDetailsActivity"
-            android:parentActivityName=".ui.users.UserListActivity"
-            android:theme="@style/CrewView.NoActionBar"/>
+            android:parentActivityName=".ui.users.UserListActivity"/>
 
     </application>
 
